Max 779 change screen
Max 779 change screen

--- a/Views/LabAdmin/EditItem.cshtml
+++ b/Views/LabAdmin/EditItem.cshtml
@@ -33,7 +33,7 @@
                 onchange="readUrl(this);" hidden />
             <label asp-for="ImageFile" class="upload">Upload a Photo</label>
         </div>
-        <div>
+        <div class="reserter">
             <button type="button" class="reset" onclick="resetAmount();">Reset</button>
         </div>
     </div>
