--- a/wwwroot/css/blacklist.css
+++ b/wwwroot/css/blacklist.css
@@ -12,14 +12,19 @@
   color: var(--blackgray);
 }
 
+.scroll-table {
+  margin: 2em 7.5% 60px 7.5%;
+  overflow-x: auto;
+}
+
 table {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 0 7.5% 60px 7.5%;
   height: calc(100vh - 230px);
   background-color: #ffffff;
-  margin-top: 2em;
+  min-width: 750px;
+  width: 100%;
 }
 
 tr {
@@ -28,389 +33,69 @@ tr {
 
 thead {
   display: grid;
-  grid-template-columns: 0.5fr 0.75fr 1fr 1fr 0.5fr 0.5fr;
+  grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
   background-color: var(--blackgray);
 }
 
-  .header-empty {
-    font-size: 34px;
-  }
-
-  .title {
-    font-size: 38px;
-  }
-  
-  thead {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: var(--blackgray);
-  }
-  
-  tbody {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: #ffffff;
-    overflow-x: hidden;
-    overflow-y: overlay;
-    padding-bottom: 100px;
-  }
-  
-  th,
-  td {
-    display: inline-flex;
-    align-items: center;
-  }
-  
-  th {
-    background-color: var(--blackgray);
-    color: #ffffff;
-    height: 60px;
-    line-height: 60px;
-    font-size: 24px;
-  }
-  
-  td {
-    border-bottom: 1px solid var(--blackgray);
-    padding: 15px 0px;
-    font-size: 20px;
-  }
-  
-  .icon i {
-    font-size: 32px;
-    cursor: pointer;
-  }
-  
-  .icon i.cancel-button {
-    padding: 10px;
-    color: var(--red);
-  }
-  
-  .icon i.cancel-button:active {
-    color: var(--darkred);
-  }
-  
-  .icon i.view-button {
-    padding: 10px;
-    color: var(--blue);
-  }
-  
-  .icon i.view-button:active {
-    color: var(--darkblue);
-  }
-  
-  tbody > tr > td > img {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-
-@media screen and (max-width: 1107px) {
-
-  .header-empty {
-    font-size: 30px;
-  }
-
-  .title {
-    font-size: 34px;
-  }
-
-  thead {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: var(--blackgray);
-  }
-  
-  tbody {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: #ffffff;
-    overflow-x: hidden;
-    overflow-y: overlay;
-    padding-bottom: 100px;
-  }
-  
-  th,
-  td {
-    display: inline-flex;
-    align-items: center;
-  }
-  
-  th {
-    background-color: var(--blackgray);
-    color: #ffffff;
-    height: 60px;
-    line-height: 60px;
-    font-size: 20px;
-  }
-  
-  td {
-    border-bottom: 1px solid var(--blackgray);
-    padding: 15px 0px;
-    font-size: 16px;
-  }
-  
-  .icon i {
-    font-size: 24px;
-    cursor: pointer;
-  }
-  
-  .icon i.cancel-button {
-    padding: 7px;
-    color: var(--red);
-  }
-  
-  .icon i.cancel-button:active {
-    color: var(--darkred);
-  }
-  
-  .icon i.view-button {
-    padding: 7px;
-    color: var(--blue);
-  }
-  
-  .icon i.view-button:active {
-    color: var(--darkblue);
-  }
-  
-  tbody > tr > td > img {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    margin-right: 7px;
-  }
+tbody {
+  display: grid;
+  grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
+  background-color: #ffffff;
+  overflow-x: hidden;
+  overflow-y: overlay;
+  padding-bottom: 100px;
 }
 
-@media screen and (max-width: 946px) {
-
-  .header-empty {
-    font-size: 26px;
-  }
-
-  .title {
-    font-size: 30px;
-  }
-
-  thead {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: var(--blackgray);
-  }
-  
-  tbody {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: #ffffff;
-    overflow-x: hidden;
-    overflow-y: overlay;
-    padding-bottom: 100px;
-  }
-  
-  th,
-  td {
-    display: inline-flex;
-    align-items: center;
-  }
-  
-  th {
-    background-color: var(--blackgray);
-    color: #ffffff;
-    height: 60px;
-    line-height: 60px;
-    font-size: 16px;
-  }
-  
-  td {
-    border-bottom: 1px solid var(--blackgray);
-    padding: 15px 0px;
-    font-size: 14px;
-  }
-  
-  .icon i {
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
-  .icon i.cancel-button {
-    padding: 5px;
-    color: var(--red);
-  }
-  
-  .icon i.cancel-button:active {
-    color: var(--darkred);
-  }
-  
-  .icon i.view-button {
-    padding: 5px;
-    color: var(--blue);
-  }
-  
-  .icon i.view-button:active {
-    color: var(--darkblue);
-  }
-  
-  tbody > tr > td > img {
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    margin-right: 5px;
-  }
+th,
+td {
+  display: inline-flex;
+  align-items: center;
 }
 
-@media screen and (max-width: 700px) {
-
-  .header-empty {
-    font-size: 25px;
-  }
-
-  .title {
-    font-size: 25px;
-  }
-
-  thead {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: var(--blackgray);
-  }
-  
-  tbody {
-    display: grid;
-    grid-template-columns: 0.25fr 0.5fr 1fr 1fr 0.5fr 0.5fr;
-    background-color: #ffffff;
-    overflow-x: hidden;
-    overflow-y: overlay;
-    padding-bottom: 100px;
-  }
-  
-  th,
-  td {
-    display: inline-flex;
-    align-items: center;
-  }
-  
-  th {
-    background-color: var(--blackgray);
-    color: #ffffff;
-    height: 60px;
-    line-height: 60px;
-    font-size: 14px;
-  }
-  
-  td {
-    border-bottom: 1px solid var(--blackgray);
-    padding: 15px 0px;
-    font-size: 12px;
-  }
-  
-  .icon i {
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .icon i.cancel-button {
-    padding: 3px;
-    color: var(--red);
-  }
-  
-  .icon i.cancel-button:active {
-    color: var(--darkred);
-  }
-  
-  .icon i.view-button {
-    padding: 3px;
-    color: var(--blue);
-  }
-  
-  .icon i.view-button:active {
-    color: var(--darkblue);
-  }
-  
-  tbody > tr > td > img {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    margin-right: 3px;
-  }
+th {
+  background-color: var(--blackgray);
+  color: #ffffff;
+  height: 60px;
+  line-height: 60px;
 }
 
-@media screen and (max-width: 600px) {
-
-  .header-empty {
-    font-size: 20px;
-  }
-
-  .title {
-    font-size: 20px;
-  }
-
-  thead {
-    display: grid;
-    grid-template-columns: 0.25fr 0.60fr 0.7fr 1fr 0.5fr 0.5fr;
-    background-color: var(--blackgray);
-  }
-  
-  tbody {
-    display: grid;
-    grid-template-columns: 0.25fr 0.6fr 0.7fr 1fr 0.5fr 0.5fr;
-    background-color: #ffffff;
-    overflow-x: hidden;
-    overflow-y: overlay;
-    padding-bottom: 100px;
-  }
-  
-  th,
-  td {
-    display: inline-flex;
-    align-items: center;
-  }
-  
-  th {
-    background-color: var(--blackgray);
-    color: #ffffff;
-    height: 60px;
-    line-height: 60px;
-    font-size: 12px;
-  }
-  
-  td {
-    border-bottom: 1px solid var(--blackgray);
-    padding: 15px 0px;
-    font-size: 10px;
-  }
-  
-  .icon i {
-    font-size: 12px;
-    cursor: pointer;
-  }
-  
-  .icon i.cancel-button {
-    padding: 3px;
-    color: var(--red);
-  }
-  
-  .icon i.cancel-button:active {
-    color: var(--darkred);
-  }
-  
-  .icon i.view-button {
-    padding: 3px;
-    color: var(--blue);
-  }
-  
-  .icon i.view-button:active {
-    color: var(--darkblue);
-  }
-  
-  tbody > tr > td > img {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    margin-right: 3px;
-  }
+td {
+  border-bottom: 1px solid var(--blackgray);
+  padding: 15px 0px;
 }
 
-.icon i.cancel-button { 
-  padding-right: 20px; 
+.icon i {
+  font-size: 32px;
+  cursor: pointer;
+}
+
+.icon i.cancel-button {
+  padding: 10px;
+  color: var(--red);
+}
+
+.icon i.cancel-button:active {
+  color: var(--darkred);
+}
+
+.icon i.view-button {
+  padding: 10px;
+  color: var(--blue);
+}
+
+.icon i.view-button:active {
+  color: var(--darkblue);
+}
+
+tbody > tr > td > img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.icon i.cancel-button {
+  padding-right: 20px;
 }
 
 th:first-child,
@@ -450,7 +135,40 @@ td:last-child {
   margin-top: -20px;
 }
 
-.icon:hover .tooltip{
+.icon:hover .tooltip {
   visibility: visible;
 }
 
+@media screen and (min-width: 1113px) {
+  th {
+    font-size: 24px;
+  }
+  td {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1112px) {
+  th {
+    font-size: 18px;
+  }
+  td {
+    font-size: 16px;
+  }
+
+  .icon i {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 501px) {
+  .title {
+    font-size: 38px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    font-size: 24px;
+  }
+}
