--- a/Views/LabAdmin/ViewItem.cshtml
+++ b/Views/LabAdmin/ViewItem.cshtml
@@ -65,7 +65,7 @@
 </div>
 
 @section Modals {
-<p style="font-size: 24px;">Would you like to eject this booklist ?</p>
+<p>Would you like to eject this booklist ?</p>
 }
 
 @section Scripts {
