--- a/Views/Search/UserProfile.cshtml
+++ b/Views/Search/UserProfile.cshtml
@@ -53,6 +53,6 @@
 </div>
 
 @section Modals {
-<p style="font-size: 24px;">Would you like to @(Model.BlackList ? "unblacklist" : "blacklist") <span
+<p>Would you like to @(Model.BlackList ? "unblacklist" : "blacklist") <span
         style="color: var(--blue);">@($"{Model.FirstName} {Model.LastName}")</span> ?</p>
 }
