--- a/Views/User/Booklist.cshtml
+++ b/Views/User/Booklist.cshtml
@@ -86,7 +86,7 @@ else
 }
 
 @section Modals {
-<p style="font-size: 24px;">Would you like to cancel this booklist ?</p>
+<p>Would you like to cancel this booklist ?</p>
 }
 
 @section Scripts {
