--- a/wwwroot/css/blacklist.css
+++ b/wwwroot/css/blacklist.css
@@ -159,11 +159,15 @@ td:last-child {
   .icon i {
     font-size: 24px;
   }
+
+  .title {
+    font-size: 32px;
+  }
 }
 
-@media screen and (min-width: 501px) {
+@media screen and (max-width: 700px) {
   .title {
-    font-size: 38px;
+    font-size: 28px;
   }
 }
 
