--- a/Views/Shared/_NavigationAdmin.cshtml
+++ b/Views/Shared/_NavigationAdmin.cshtml
@@ -11,8 +11,8 @@
     <div id="Topnav" class="menu">
         <a id="lab" asp-controller="LabAdmin" asp-action="Index"
             class='@("LabAdmin" == controller ? "active" : "")'>Lab</a>
-        <a id="colab" asp-controller="CoLab" asp-action="Index"
-            class='@("CoLab" == controller ? "active" : "")'>Co-Lab</a>
+        <a id="DinoLab" asp-controller="DinoLab" asp-action="Index"
+            class='@("DinoLab" == controller ? "active" : "")'>DinoLab</a>
         <a id="search" asp-controller="Search" asp-action="Index"
             class='@("Search" == controller ? "active" : "")'>Search</a>
         <a id="blacklist" asp-controller="Admin" asp-action="Blacklist"
@@ -24,8 +24,8 @@
         <a href="javascript:void(0)" class="closebtn" onclick="slideBar()">&times;</a>
         <a id="lab" asp-controller="LabAdmin" asp-action="Index"
             class='@("LabAdmin" == controller ? "active" : "")'>Lab</a>
-        <a id="colab" asp-controller="CoLab" asp-action="Index"
-            class='@("CoLab" == controller ? "active" : "")'>Co-Lab</a>
+        <a id="DinoLab" asp-controller="DinoLab" asp-action="Index"
+            class='@("DinoLab" == controller ? "active" : "")'>DinoLab</a>
         <a id="search" asp-controller="Search" asp-action="Index"
             class='@("Search" == controller ? "active" : "")'>Search</a>
         <a id="blacklist" asp-controller="Admin" asp-action="Blacklist"
