--- a/Views/Shared/_NavigationUser.cshtml
+++ b/Views/Shared/_NavigationUser.cshtml
@@ -10,7 +10,7 @@
   </a>
   <div id="Topnav" class="menu">
     <a id="lab" asp-controller="Lab" asp-action="Index" class='@("Lab" == controller ? "active" : "")'>Lab</a>
-    <a id="colab" asp-controller="CoLab" asp-action="Index" class='@("CoLab" == controller ? "active" : "")'>Co-Lab</a>
+    <a id="DinoLab" asp-controller="DinoLab" asp-action="Index" class='@("DinoLab" == controller ? "active" : "")'>DinoLab</a>
     <a id="booklist" asp-controller="User" asp-action="Booklist"
       class='@("Booklist" == action ? "active" : "")'>Booklist</a>
     <a id="profile" asp-controller="User" asp-action="Profile" class='@("Profile" == action ||
@@ -21,7 +21,7 @@
   <div id="Sidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="slideBar()">&times;</a>
     <a id="lab" asp-controller="Lab" asp-action="Index" class='@("Lab" == controller ? "active" : "")'>Lab</a>
-    <a id="colab" asp-controller="CoLab" asp-action="Index" class='@("CoLab" == controller ? "active" : "")'>Co-Lab</a>
+    <a id="DinoLab" asp-controller="DinoLab" asp-action="Index" class='@("DinoLab" == controller ? "active" : "")'>DinoLab</a>
     <a id="booklist" asp-controller="User" asp-action="Booklist"
       class='@("Booklist" == action ? "active" : "")'>Booklist</a>
     <a id="profile" asp-controller="User" asp-action="Profile" class='@("Profile" == action ||
