--- a/Views/Search/UserBooklist.cshtml
+++ b/Views/Search/UserBooklist.cshtml
@@ -73,8 +73,9 @@
                                 {
                                     <td><div class="icon"><i class="fas fa-times-circle"
                                 onclick="confirmPopUpOnForm({id : '@bookList.Id'});"
-                                onmouseover="setOverPosition(event);"></i>
-                                <span class="tooltip">Cancel</span></div></td>
+                                onmouseover="setOverPosition(event);"
+                                onmouseout="resetTooltip(event);"></i>
+                                <span class="tooltip">Eject</span></div></td>
                                 }
                                 else
                                 {
