--- a/Views/Admin/Blacklist.cshtml
+++ b/Views/Admin/Blacklist.cshtml
@@ -51,11 +51,11 @@ else
                             }
                             <td>
                                 <div class="icon"><a asp-controller="Search" asp-action="UserProfile" asp-route-Id="@user.Id"><i
-                                    class="fas fa-eye view-button" onmouseover="setOverPositionView(event);"></i></a><span
-                                class="tooltip">View</span></div>
+                                    class="fas fa-eye view-button" onmouseover="setOverPositionView(event);"
+                                    onmouseout="resetTooltipView(event);"></i></a><span class="tooltip">View</span></div>
                                 <div class="icon"><i class="fas fa-times-circle cancel-button"
-                                onclick="confirmPopUpOnForm({id : '@user.Id'});"
-                                onmouseover="setOverPosition(event);"></i><span class="tooltip">Unblacklist</span>
+                                onclick="confirmPopUpOnForm({id : '@user.Id'});" onmouseover="setOverPosition(event);"
+                                onmouseout="resetTooltip(event);"></i><span class="tooltip">Unblacklist</span>
                                 </div>
                             </td>
                         </tr>
