--- a/Views/User/Booklist.cshtml
+++ b/Views/User/Booklist.cshtml
@@ -67,7 +67,7 @@ else
               {
                 <td>
                   <div class="icon"><i class="fas fa-times-circle" onclick="confirmPopUpOnForm({id : '@bookList.Id'});"
-                onmouseover="setOverPosition(event);"></i><span class="tooltip">Cancel</span></div>
+                onmouseover="setOverPosition(event);" onmouseout="resetTooltip(event);"></i><span class="tooltip">Cancel</span></div>
                 </td>
               }
               else
