--- a/wwwroot/css/edit_lab.css
+++ b/wwwroot/css/edit_lab.css
@@ -36,7 +36,7 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin: 20px 50px;
     row-gap: 15px;
     font-size: 20px;
